Update Active Menu Class

--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
                 <nav class="header_nav collapse" id="headerMenu">
                     <ul class="header_nav-list">
                         <li class="header_nav-list_item">
-                            <a class="nav-item" href="index.html" data-page="home">Home</a>
+                            <a class="nav-item" href="#home" data-page="home">Home</a>
                         </li>
                         <li class="header_nav-list_item">
-                            <a class="nav-item" href="about.html" data-page="about">About Us</a>
+                            <a class="nav-item" href="#persyaratan" data-page="about">Persyaratan</a>
                         </li>
                         <li class="header_nav-list_item">
-                            <a class="nav-item" href="pricing.html" data-page="pricing">Prices</a>
+                            <a class="nav-item" href="#pengunguman" data-page="pricing">Pengunguman</a>
                         </li>
                     </ul>
                     <ul class="promobar_socials d-flex align-items-center justify-content-center">
@@ -98,7 +98,7 @@
         <main>
             <!-- hero section start -->
             <div class="underlay"></div>
-            <section class="hero">
+            <section class="hero" id="home">
                 <div class="container d-lg-flex align-items-center">
                     <div class="hero_content">
                         <h1 class="hero_content-header" data-aos="fade-up">PENDAFTARAN WISUDA STMIK BANDUNG</h1>
@@ -136,7 +136,7 @@
             </section>
             <!-- hero section end -->
             <!-- features section start -->
-            <div class="features">
+            <div class="features" id="persyaratan">
                 <div class="container">
                     <div class="popular_header">
                         <h2 class="popular_header-title" data-aos="fade-up">Persyaratan</h2>
@@ -302,7 +302,7 @@
             </section> -->
             <!-- about section end -->
             <!-- popular courses section start -->
-            <section class="popular">
+            <section class="popular" id="pengunguman">
                 <div class="container">
                     <div class="popular_header">
                         <h2 class="popular_header-title" data-aos="fade-up">Pengunguman</h2>
