--- a/journal.html
+++ b/journal.html
@@ -98,10 +98,10 @@
                             </div>
                         </li>
                         <li class="header_nav-list_item">
-                            <a class="nav-item" href="about.html" data-page="about">About Us</a>
+                            <a class="nav-item" href="about.html" data-page="about">Persyaratan</a>
                         </li>
                         <li class="header_nav-list_item">
-                            <a class="nav-item" href="pricing.html" data-page="pricing">Prices</a>
+                            <a class="nav-item" href="pricing.html" data-page="pricing">Pengunguman</a>
                         </li>
                         <li class="header_nav-list_item dropdown">
                             <a
