--- a/index.html
+++ b/index.html
@@ -21,21 +21,26 @@
                         </a>
                     </li>
                     <li class="promobar_socials-item">
-                        <a class="link" href="https://x.com/stmikbandung" target="_blank" rel="noopener noreferrer">
-                            <i class="icon-twitter"></i>
-                        </a>
-                    </li>
-                    <li class="promobar_socials-item">
                         <a class="link" href="https://www.instagram.com/stmikbandung" target="_blank" rel="noopener noreferrer">
                             <i class="icon-instagram"></i>
                         </a>
                     </li>
+                    <li class="promobar_socials-item">
+                        <a class="link" href="https://www.youtube.com/@stmikbandung113" target="_blank" rel="noopener noreferrer">
+                            <i class="icon-youtube-play"></i>
+                        </a>
+                    </li>
+                    <li class="promobar_socials-item">
+                        <a class="link" href="https://www.linkedin.com/company/stmik-bandung/" target="_blank" rel="noopener noreferrer">
+                            <i class="icon-linkedin-brands"></i>
+                        </a>
+                    </li>
                 </ul>
                 <div class="promobar_main d-flex align-items-center">
-                    <a class="btn btn--yellow" href="#" id="signUpTrigger">
+                    <a class="btn btn--yellow" href="login.html">
                         <span>Daftar</span>
                     </a>
-                    <a class="btn btn--blue" href="#" id="loginTrigger">
+                    <a class="btn btn--blue" href="login.html">
                         <span>Masuk</span>
                     </a>
                 </div>
@@ -64,23 +69,6 @@
                         </li>
                         <li class="header_nav-list_item">
                             <a class="nav-item" href="#pengunguman" data-page="pricing">Pengunguman</a>
-                        </li>
-                    </ul>
-                    <ul class="promobar_socials d-flex align-items-center justify-content-center">
-                        <li class="promobar_socials-item">
-                            <a class="link" href="#" target="_blank" rel="noopener noreferrer">
-                                <i class="icon-facebook"></i>
-                            </a>
-                        </li>
-                        <li class="promobar_socials-item">
-                            <a class="link" href="#" target="_blank" rel="noopener noreferrer">
-                                <i class="icon-twitter"></i>
-                            </a>
-                        </li>
-                        <li class="promobar_socials-item">
-                            <a class="link" href="#" target="_blank" rel="noopener noreferrer">
-                                <i class="icon-instagram"></i>
-                            </a>
                         </li>
                     </ul>
                 </nav>
@@ -202,8 +190,8 @@
                                     <img src="svg/logo.svg" alt="Edison" />
                                 </span>
                                 <span class="text">
-                                    <span class="brand">edison</span>
-                                    <span class="text_secondary">courses</span>
+                                    <span class="brand">STMIK</span>
+                                    <span class="text_secondary">Bandung</span>
                                 </span>
                             </a>
                         </div>
@@ -214,29 +202,34 @@
                         </p>
                         <ul class="footer_block-socials d-flex align-items-center">
                             <li class="footer_block-socials_item">
-                                <a class="link" href="https://www.facebook.com" target="_blank" rel="noopener noreferrer">
+                                <a class="link" href="https://www.facebook.com/BandungSTMIK/?locale=id_ID" target="_blank" rel="noopener noreferrer">
                                     <i class="icon-facebook"></i>
                                 </a>
                             </li>
                             <li class="footer_block-socials_item">
-                                <a class="link" href="https://www.twitter.com" target="_blank" rel="noopener noreferrer">
-                                    <i class="icon-twitter"></i>
+                                <a class="link" href="https://www.instagram.com/stmikbandung" target="_blank" rel="noopener noreferrer">
+                                    <i class="icon-instagram"></i>
                                 </a>
                             </li>
                             <li class="footer_block-socials_item">
-                                <a class="link" href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
-                                    <i class="icon-instagram"></i>
+                                <a class="link" href="https://www.youtube.com/@stmikbandung113" target="_blank" rel="noopener noreferrer">
+                                    <i class="icon-youtube-play"></i>
+                                </a>
+                            </li>
+                            <li class="footer_block-socials_item">
+                                <a class="link" href="https://www.linkedin.com/company/stmik-bandung/" target="_blank" rel="noopener noreferrer">
+                                    <i class="icon-linkedin-brands"></i>
                                 </a>
                             </li>
                         </ul>
                         <div class="wrapper d-flex flex-column">
                             <a class="link link--contacts text text--sm d-inline-flex align-items-center" href="mailto:example@domain.com">
                                 <i class="icon-envelope icon"></i>
-                                acadesiq@mail.com
+                                info@stmik-amikbandung.ac.id
                             </a>
                             <a class="link link--contacts text text--sm d-inline-flex align-items-center" href="tel:+123456789">
                                 <i class="icon-phone-solid icon"></i>
-                                +1-202-555-0190
+                                +62 811-2391-136
                             </a>
                         </div>
                     </div>
@@ -244,13 +237,13 @@
                         <h5 class="footer_block-header">Information:</h5>
                         <ul class="footer_block-nav">
                             <li class="footer_block-nav_item">
-                                <a class="link" href="about.html">About This Project</a>
+                                <a class="link" href="#home">Home</a>
                             </li>
                             <li class="footer_block-nav_item">
-                                <a class="link" href="contacts.html">Contact Us</a>
+                                <a class="link" href="#persyaratan">Persyaratan</a>
                             </li>
                             <li class="footer_block-nav_item">
-                                <a class="link" href="courses.html">All Courses</a>
+                                <a class="link" href="#pengunguman">Pengunguman</a>
                             </li>
                         </ul>
                     </div>
@@ -258,7 +251,7 @@
             </div>
             <div class="footer_secondary">
                 <div class="container d-flex flex-column flex-sm-row align-items-center justify-content-sm-between">
-                    <a class="footer_secondary-scroll" id="scrollToTop" href="#">
+                    <a class="footer_secondary-scroll" id="scrollToTop" href="#home">
                         <i class="icon-angle-up icon"></i>
                     </a>
                     <p class="footer_secondary-copyright">Copyright @ <span id="currentYear"></span> STMIK Bandung</p>
