--- a/index.html
+++ b/index.html
@@ -49,13 +49,9 @@
         <header class="header" data-page="home">
             <div class="container d-flex flex-wrap justify-content-between align-items-center">
                 <div class="logo header_logo">
-                    <a class="d-inline-flex align-items-center" href="index.html">
+                    <a class="d-lg-table" href="index.html">
                         <span class="logo_picture">
-                            <img src="svg/logo.svg" alt="STMIK" />
-                        </span>
-                        <span class="text">
-                            <span class="brand">STMIK</span>
-                            <span class="text_secondary">Bandung</span>
+                            <img src="img/logo_1.png" alt="STMIK" />
                         </span>
                     </a>
                 </div>
@@ -91,7 +87,7 @@
                             untuk merayakan pencapaian dan semua kerja keras yang telah Anda lakukan!
                         </p>
                         <div class="hero_content-action d-flex flex-wrap">
-                            <a class="btn btn--gradient" href="#" data-aos="fade-left">
+                            <a class="btn btn--gradient" href="login.html" data-aos="fade-left">
                                 <span class="text">Daftar Sekarang</span>
                             </a>
                         </div>
@@ -178,20 +174,16 @@
             </section>
             <!-- popular courses section end -->
         </main>
-
+                
         <!-- homepage content end -->
         <footer class="footer">
             <div class="container">
-                <div class="footer_wrapper d-flex justify-content-between">
-                    <div class="footer_block" data-order="1">
+                <div class="footer_wrapper">
+                    <div class="footer_block">
                         <div class="logo logo--footer">
-                            <a class="d-inline-flex align-items-center" href="index.html">
+                            <a class="d-lg-table" href="index.html">
                                 <span class="logo_picture">
-                                    <img src="svg/logo.svg" alt="Edison" />
-                                </span>
-                                <span class="text">
-                                    <span class="brand">STMIK</span>
-                                    <span class="text_secondary">Bandung</span>
+                                    <img src="img/logo_1.png" alt="Logo" />
                                 </span>
                             </a>
                         </div>
@@ -233,21 +225,6 @@
                             </a>
                         </div>
                     </div>
-                    <div class="footer_block col-sm-6 col-lg-auto" data-order="2">
-                        <h5 class="footer_block-header">Information:</h5>
-                        <ul class="footer_block-nav">
-                            <li class="footer_block-nav_item">
-                                <a class="link" href="#home">Home</a>
-                            </li>
-                            <li class="footer_block-nav_item">
-                                <a class="link" href="#persyaratan">Persyaratan</a>
-                            </li>
-                            <li class="footer_block-nav_item">
-                                <a class="link" href="#pengunguman">Pengunguman</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
             </div>
             <div class="footer_secondary">
                 <div class="container d-flex flex-column flex-sm-row align-items-center justify-content-sm-between">
@@ -258,6 +235,8 @@
                 </div>
             </div>
         </footer>
+
+
         <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
         <script src="js/common.min.js"></script>
     </body>
