--- a/login.html
+++ b/login.html
@@ -28,7 +28,7 @@
                 <input type="username" placeholder="Username">
                 <input type="password" placeholder="Password">
                 <!-- <a href="#">Lupa Kata Sandi?</a> -->
-                <button>Masuk</button>
+                <button> <a href="/Dashboard/dashboard.html">Masuk</a></button>
             </form>
         </div>
         <div class="toggle-container">
