--- a/login.html
+++ b/login.html
@@ -12,23 +12,23 @@
 <body>
     <div class="container" id="container">
         <div class="form-container sign-up">
-            <form>
+            <form action="login.php" method="post">
                 <h1>Buat Akun</h1>
                 <span>atau gunakan email Anda untuk pendaftaran</span>
-                <input type="text" placeholder="Nama">
-                <input type="nim" placeholder="NIM">
-                <input type="password" placeholder="Password">
-                <button>Daftar</button>
+                <input type="text" name="nama" placeholder="Nama" required>
+                <input type="number" name="nim" placeholder="NIM" required>
+                <input type="password" name="password" placeholder="Password" required>
+                <button type="submit" name="register">Daftar</button>
             </form>
         </div>
         <div class="form-container sign-in">
-            <form>
+            <form action="login.php" method="post">
                 <h1>Masuk</h1>
                 <span>atau gunakan sandi email Anda</span>
-                <input type="username" placeholder="Username">
-                <input type="password" placeholder="Password">
+                <input type="text" name="username" placeholder="Username" required>
+                <input type="password" name="password" placeholder="Password" required>
                 <!-- <a href="#">Lupa Kata Sandi?</a> -->
-                <button> <a href="/Dashboard/dashboard.html">Masuk</a></button>
+                <button type="submit" name="login">Masuk</button>
             </form>
         </div>
         <div class="toggle-container">
