--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             </div>
             <!-- features section end -->
 
-            <!-- popular courses section start -->
+            <!-- Pengunguman section start -->
             <section class="popular" id="pengunguman">
                 <div class="container">
                     <div class="popular_header">
@@ -167,12 +167,12 @@
                             Prestasi membanggakan telah diraih! Setelah melalui perjuangan panjang, saatnya merayakan keberhasilan. Lihat daftar lengkap wisudawan/i berprestasi di sini
                         </p>
                     </div>
-                    <a class="popular_btn btn btn--gradient" href="courses.html">
+                    <a class="popular_btn btn btn--gradient" href="dashboard.php">
                         <span class="text">Cek Profile</span>
                     </a>
                 </div>
             </section>
-            <!-- popular courses section end -->
+            <!-- Pengunguman section end -->
         </main>
                 
         <!-- homepage content end -->
