--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
             <form action="login.php" method="post">
                 <h1>Masuk</h1>
                 <span>atau gunakan sandi email Anda</span>
-                <input type="text" name="username" placeholder="Username" required>
+                <input type="text" name="username" placeholder="NIM" required>
                 <input type="password" name="password" placeholder="Password" required>
                 <!-- <a href="#">Lupa Kata Sandi?</a> -->
                 <button type="submit" name="login">Masuk</button>
