--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <title>Home</title>
         <script id="www-widgetapi-script" src="https://s.ytimg.com/yts/jsbin/www-widgetapi-vflS50iB-/www-widgetapi.js" async=""></script>
@@ -93,8 +93,7 @@
                         </div>
                     </div>
                     <div class="hero_media col-lg-6">
-                        <!-- <lottie-player src="lottie/hero.json" background="transparent" speed="1" style="width: 100%; height: 100%" loop autoplay></lottie-player> -->
-                         <img src="img/customer01.png" alt="">
+                         <img src="img/wisuda.jpg" alt="wisuda">
                     </div>
                 </div>
             </section>
@@ -189,9 +188,8 @@
                             </a>
                         </div>
                         <p class="footer_block-text">
-                            STMIK Bandung merupakan akademi online untuk meningkatkan kompetensi dalam transformasi digital, GRC (Governance, Risk 
-                            Management & Compliance), IT Governance dan Innovation Management. Materi kursus yang disampaikan adalah berdasarkan 
-                            konsep, best practise dan lesson learned dari pari pakar SOLMIT Consulting dan instruktur yang berpengalaman dalam bidangnya.
+                            STMIK Bandung merupakan STMIK pertama di Jawa Barat dan pelopor pendidikan tinggi informatika swasta dengan fokus untuk mencetak tenaga profesional dan technopreneur IT.
+                            Dalam upaya memberikan kesempatan kepada masyarakat yang tidak mempunyai waktu luang mengikuti pendidikan di hari kerja. STMIK BANDUNG membuka Program Kelas Karyawan atau Program Kuliah Karyawan jenjang S1. Kualitas dan proses pendidikan di STMIK BANDUNG sama dirancang sama dengan Kualitas dan proses pendidikan pada hari biasa. Setiap perkuliahaan diatur secara terstruktur dan terjadwal dengan pemilihan tenaga pengajar terbaik dan berpengalaman di bidangnya. Proses belajar didukung oleh fasilitas terbaik.
                         </p>
                         <ul class="footer_block-socials d-flex align-items-center">
                             <li class="footer_block-socials_item">
@@ -232,13 +230,10 @@
                     <a class="footer_secondary-scroll" id="scrollToTop" href="#home">
                         <i class="icon-angle-up icon"></i>
                     </a>
-                    <p class="footer_secondary-copyright">Copyright @ <span id="currentYear"></span> STMIK Bandung</p>
+                    <p class="footer_secondary-copyright">STMIK Bandung @ <span id="currentYear"></span> All rights reservec</p>
                 </div>
             </div>
         </footer>
-
-
-        <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
         <script src="js/common.min.js"></script>
     </body>
 </html>
